2018-09-19 Alibaba Cloud.
	* version: 1.4.2
	* BUG FIX: fix bug of `start.sh` script commited by `ManleyLiu`.
	* BUG FIX: fix bug of error judge sentence in bulk writer commited by
	`chensi01`.
	* IMPROVE: add timeout configuration and flush strategy for the syncer.
	* IMPROVE: remove "send [0] logs" hint in log.

2018-09-04 Alibaba Cloud.
	* version: 1.4.1
	* BUG FIX: fix bug of the time zone converter.

2018-09-03 Alibaba Cloud.
	* version: 1.4.0
	* Feature: Add receiver which is used to connect to different tunnels
	like rpc, tcp, file, mock and kafka.

2018-08-08 Alibaba Cloud.
	* version: 1.2.1
	* BUG FIX: remove `$v` field in oplog to fix the bug in MongoDB 3.6.

2018-07-29 Alibaba Cloud.
	* version: 1.2.0
	* Feature: Use general write instead of op_command. When the version is
	greater than or equal to 3.2, the bulk writer is used for batch writing,
	otherwise the single writer is used for single writing.	

2018-07-18 Alibaba Cloud.
	* version: 1.0.0
	* BUG FIX: upsert/remove error when old value isn't exist.
	* BUG FIX: connect to Alibaba Cloud MongoDB instance without permission.
	* BUG FIX: some logs can't be print out when crash.
	
2018-06-28 Alibaba Cloud.
	* mongo-shake: initial release.