@@ -56,7 +56,8 @@ shard_key = auto
 
 
 # syncer send time interval, unit is second.
-syncer.buffer_time = 3
+# flush the syncer reader buffer time interval.
+syncer.reader.buffer_time = 3
 
 
 # oplog transmit worker concurrent
