@@ -7,20 +7,29 @@ import (
 
 	"mongoshake/dbpool"
 	"mongoshake/oplog"
+	"mongoshake/collector/configure"
 
 	"github.com/vinllen/mgo"
 	"github.com/vinllen/mgo/bson"
-	"mongoshake/collector/configure"
 )
 
 const (
 	QueryTs   = "ts"
 	QueryGid  = "g"
 	QueryOpGT = "$gt"
+
+	tailTimeout   = 7
+	oplogChanSize = 0
 )
 
 // TimeoutError. mongodb query executed timeout
 var TimeoutError = errors.New("read next log timeout, It shouldn't be happen")
+
+// used in internal channel
+type retOplog struct {
+	log *bson.Raw // log content
+	err error     // error
+}
 
 // OplogReader represents stream reader from mongodb that specified
 // by an url. And with query options. user can iterate oplogs.
@@ -33,11 +42,19 @@ type OplogReader struct {
 
 	// query statement and current max cursor
 	query bson.M
+
+	// oplog channel
+	oplogChan chan *retOplog
+	fetcherExist bool
 }
 
 // NewOplogReader creates reader with mongodb url
 func NewOplogReader(src string) *OplogReader {
-	return &OplogReader{src: src, query: bson.M{}}
+	return &OplogReader{
+		src: src,
+		query: bson.M{},
+		oplogChan: make(chan *retOplog, oplogChanSize),
+	}
 }
 
 // SetQueryTimestampOnEmpty set internal timestamp if
@@ -54,9 +71,6 @@ func (reader *OplogReader) UpdateQueryTimestamp(ts bson.MongoTimestamp) {
 
 // Next returns an oplog by raw bytes which is []byte
 func (reader *OplogReader) Next() (*bson.Raw, error) {
-	if err := reader.ensureNetwork(); err != nil {
-		return nil, err
-	}
 	return reader.get()
 }
 
@@ -72,24 +86,40 @@ func (reader *OplogReader) NextOplog() (log *oplog.GenericOplog, err error) {
 	return log, nil
 }
 
-// internal get next oplog. used in Next() and NextOplog()
+// internal get next oplog. Used in Next() and NextOplog(). The channel and current function may both return
+// timeout which is acceptable.
 func (reader *OplogReader) get() (log *bson.Raw, err error) {
-	if reader.oplogsIterator == nil {
-		return nil, errors.New("internal syncer oplogs iterator is not valid")
-	}
-	log = new(bson.Raw)
-
-	if !reader.oplogsIterator.Next(log) {
-		if err := reader.oplogsIterator.Err(); err != nil {
-			// some internal error. need rebuild the oplogsIterator
-			reader.releaseIterator()
-			return nil, fmt.Errorf("get next oplog failed. release oplogsIterator, %s", err.Error())
-		} else {
-			// query timeout
+	select {
+		case ret := <-reader.oplogChan:
+			return ret.log, ret.err
+		case <-time.After(time.Second * time.Duration(conf.Options.SyncerReaderBufferTime)):
 			return nil, TimeoutError
-		}
 	}
-	return log, nil
+}
+
+// fetch oplog and put into channel, must be started manually
+func (reader *OplogReader) StartFetcher() {
+	var log *bson.Raw
+	for {
+		if err := reader.ensureNetwork(); err != nil {
+			reader.oplogChan <- &retOplog{nil, err}
+			continue
+		}
+
+		log = new(bson.Raw)
+		if !reader.oplogsIterator.Next(log) {
+			if err := reader.oplogsIterator.Err(); err != nil {
+				// some internal error. need rebuild the oplogsIterator
+				reader.releaseIterator()
+				reader.oplogChan <- &retOplog{nil, fmt.Errorf("get next oplog failed. release oplogsIterator, %s", err.Error())}
+			} else {
+				// query timeout
+				reader.oplogChan <- &retOplog{nil, TimeoutError}
+			}
+			continue
+		}
+		reader.oplogChan <- &retOplog{log, nil}
+	}
 }
 
 // ensureNetwork establish the mongodb connection at first
@@ -113,7 +143,7 @@ func (reader *OplogReader) ensureNetwork() (err error) {
 	reader.conn.Session.SetBatch(8192)
 	reader.conn.Session.SetPrefetch(0.2)
 	reader.oplogsIterator = reader.conn.Session.DB("local").C(dbpool.OplogNS).
-		Find(reader.query).LogReplay().Tail(time.Second * time.Duration(conf.Options.SyncerBufferTime))
+		Find(reader.query).LogReplay().Tail(time.Second * tailTimeout) // this timeout is useless
 	return
 }
 
